--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pratik Nilange</title>
+    <title>Nitesh Kumar T</title>
 	<link rel="icon" href="favicon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
