--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World!</h1>
-<h2>This is Nitesh</h2>
+<h2>This is Nitesh kumar</h2>
  <a class="navbar-brand" href="index.html">Nitesh Kumar </a>
 </body>
 </html>
